# SparkKafkaDistribute

./: .gitignore  pyproject.toml  requirements.txt
crawling/: page_source.py  parse.py
sparkAnaliysis/: data_shape.py  data_total_length.py  null_check.ipynb  spark_big.ipynb  spark_ml_taxi.ipynb  spark_taxi.ipynb  spark_trip_distribute.py  taxi_analy.ipynb  taxi_pickup.ipynb  taxi_trips.py  test.csv  trips_sql.ipynb
sparkAnaliysis/prepro/: 2019_prepro_02.parquet.csv
